--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_phone_direct_caller: ^2.1.1
   fluttertoast: ^8.2.2
   shared_preferences: ^2.2.1
+  uni_links: ^0.5.1
 
    
     
