--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   fluttertoast: ^8.2.2
   shared_preferences: ^2.2.1
   uni_links: ^0.5.1
+  awesome_notifications: ^0.8.2
+  avatar_glow: ^2.0.2
 
    
     
