--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   uni_links: ^0.5.1
   awesome_notifications: ^0.8.2
   avatar_glow: ^2.0.2
+  google_maps_flutter: ^2.5.0
+  location: ^5.0.3
+  flutter_polyline_points: ^2.0.0
 
    
     
