--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ dependencies:
   avatar_glow: ^2.0.2
   google_maps_flutter: ^2.5.0
   location: ^5.0.3
-  flutter_polyline_points: ^2.0.0
+  flutter_polyline_points: ^2.0.0geolocator: ^10.1.0
+  geolocator: ^10.1.0
 
    
     
