--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   firebase_database: ^10.2.6
   type_text: ^1.0.0
   curved_navigation_bar: ^1.0.3
-  uuid: ^4.1.0
+  uuid: 3.0.7
   cached_network_image: ^3.3.0
   url_launcher: ^6.1.14
   flutter_phone_direct_caller: ^2.1.1
@@ -61,8 +61,9 @@ dependencies:
   avatar_glow: ^2.0.2
   google_maps_flutter: ^2.5.0
   location: ^5.0.3
-  flutter_polyline_points: ^2.0.0geolocator: ^10.1.0
+  flutter_polyline_points: ^2.0.0
   geolocator: ^10.1.0
+ 
 
    
     
